mobile dark mode navbar fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -142,6 +142,14 @@ a.block {
 }
 
 @media only screen and (max-width: 996px) {
+  [data-theme='dark'] .navbar {
+    box-shadow: none;
+    background: rgba(22, 22, 22, 0.7);
+    backdrop-filter: none;
+  }
+}
+
+@media only screen and (max-width: 996px) {
   .navbar {
     box-shadow: none;
     background: rgba(255, 255, 255, 0.7);
